add services, reviews, why choose and prices

--- a/src/app/components/landing-page.component.html
+++ b/src/app/components/landing-page.component.html
@@ -71,6 +71,21 @@
 
   </section>
 
+  <section class="hero-section servicios" id="servicios">
+
+    <app-services></app-services>
+
+  </section>
+
+
+  <app-why-choose-us></app-why-choose-us>
+
+
+  <app-reviews></app-reviews>
+
+  <app-price-overview></app-price-overview>
+
+  
   <!-- Footer -->
   <footer class="modern-footer">
     <div class="footer-top">
