--- a/src/app/components/landing-page.component.scss
+++ b/src/app/components/landing-page.component.scss
@@ -247,14 +247,49 @@ $transition-speed: 0.3s;
   overflow: hidden;
   border-radius: $border-radius;
 
+  .carousel {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    z-index: 0;
+
+    .carousel-slide {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      opacity: 0;
+      transition: opacity $transition-speed ease-in-out;
+
+      &.active {
+        opacity: 1;
+      }
+
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: unset;
+      }
+    }
+  }
+
   .hero-overlay {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background: transparent; // Ajusta si deseas oscurecer la imagen de fondo
+    background: rgba(0, 0, 0, 0.6); // Oscurece la imagen de fondo
     z-index: 1;
+  }
+
+  .hero-content {
+    position: relative;
+    z-index: 2;
   }
 }
 
